--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,14 +1,14 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <h1>Thanks for visiting!<h1>
-        {% for post in posts %}
+{% extends 'blog/base.html' %}
+
+{% block content %}
+{% for post in posts %}
            <div style="font-size:18px; color:#333; line-height:1.5">
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{post.title}}</a></h1>
+                <div>
+                    {{post.published_date}}
+                </div>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
                 <p>{{post.text|linebreaksbr}}</p>
             </div>
         {% endfor %}
-    </body>
-</html>
+{% endblock %}
+
